add YoutubeScreen Template Overlay